fix: change sync status appearance on mobile

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -99,18 +99,15 @@
             width: 100%;
         }
     }
-    &__account-row {
-        flex-direction: column;
-        align-items: flex-start;
-    }
     &__status {
-        font-size: 10px;
         order: 3;
         margin-left: 0;
+        margin-top: calc(var(--spacing) * 2);
         flex: 0 0 100%;
         width: 100%;
         box-sizing: border-box;
         white-space: nowrap;
+        text-align: center;
     }
 }
 
